tests/parser/should_pass/include_1.csp
include "include_2.csp"

P = 2

Q = 4


S = P + Q + R
