tests/parser/should_fail/split_defn_1.csp
P =

include "split_defn_2.csp"
